<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
    <modelVersion>4.0.0</modelVersion>
    <groupId>nl.uu.fi.dwo</groupId>
    <artifactId>dwo.master.pom</artifactId>
    <version>1.2-SNAPSHOT</version>
    <packaging>pom</packaging>
    <properties>
        <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
        <jdk.version>8</jdk.version>
        <jdk>${env.JAVA_HOME_8}</jdk>
        <buildVersion>${project.version}</buildVersion>
    </properties>
    <name>${project.build.finalName}</name>
    
    <organization>
        <name>Freudenthal Institute</name>
        <url>http://www.uu.nl/onderzoek/freudenthal-instituut</url>
    </organization>
    <modules>
		<module>MicroIndex</module>
		<module>xapiserver</module>
		<module>DWO</module>
		<module>async-lib</module>
		<module>eawt</module>
		<module>promise-api</module>
		<module>numworxlf</module>
		<module>beans_lineairealgebra</module>
	</modules>    

    <!-- automagically use snapshot/release -->
    <distributionManagement>
	    <repository>
	      <id>github</id>
	      <name>GitHub Packages</name>
	      <url>https://maven.pkg.github.com/UtrechtUniversity/numworx-dwo-project</url>
	    </repository>
        <snapshotRepository>
          <id>github</id>
          <name>GitHub Packages</name>
          <url>https://maven.pkg.github.com/UtrechtUniversity/numworx-dwo-project</url>
        </snapshotRepository>
    </distributionManagement>           
    <repositories>
 	    <repository>
	      <id>numworx-dwo-project</id>
	      <name>GitHub Packages</name>
	      <url>https://maven.pkg.github.com/UtrechtUniversity/numworx-dwo-project</url>
	      <snapshots>
			  <enabled>true</enabled>
		  </snapshots>
	    </repository>		
    </repositories>
    <pluginRepositories>
    </pluginRepositories>    
</project>
